fix: Fix the bug where a button’s text covers the footer of the chat component

--- a/src/app/page/group/chat/chat.component.scss
+++ b/src/app/page/group/chat/chat.component.scss
@@ -60,6 +60,7 @@
   padding-bottom: 8px;
   bottom: 0;
   background-color: var(--body-background);
+  z-index: $FLOAT_ZINDEX;
 
   mat-form-field {
     width: inherit;
